--- a/server/index.html
+++ b/server/index.html
@@ -3,9 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Red Dice</title>
-		<meta content="width=device-width, initialscale=1", name="viewport">
+		<meta content="width=device-width, initial-scale=1", name="viewport">
 	</head>
 	<body>
-		<h1>Hello World</h1>
+		<div id="app"></div>
+		<script src="bundle.js"></script>
 	</body>
 </html>
